--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,105 +3,143 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 /* line 11, ../sass/screen.scss */
-@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400italic,700italic);
-
-/*@font-face {
-    font-family: 'BebasNeueRegular';
-    src: url('../public/fonts/BebasNeueRegular.otf');
-}*/
 
 @font-face {
-    font-family: 'BebasNeueRegular';
-    src: url('https://sites.google.com/site/directorybesttheme/font/BebasNeue-webfont.eot');
-    src: url('https://sites.google.com/site/directorybesttheme/font/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
-         url('https://sites.google.com/site/directorybesttheme/font/BebasNeue-webfont.woff') format('woff'),
-         url('https://sites.google.com/site/directorybesttheme/font/BebasNeue-webfont.ttf') format('truetype'),
-         url('https://sites.google.com/site/directorybesttheme/font/BebasNeue-webfont.svg#BebasNeueRegular') format('svg');
-    font-weight: normal;
+    font-family: 'ProximaNova-Light';
+    src: url('../fonts/ProximaNova-Light');
     font-style: normal;
+    font-weight: 100;
 }
 
-body {
-    background-color: #F6F6F6;
+@font-face {
+    font-family: 'ChaparralPro-Regular';
+    src: url('../fonts/ChaparralPro-Regular');
+    font-style: normal;
+    font-weight: 100;
+}
+
+@mixin vertical-align($position: relative) {
+  position: $position;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+body {      
+    height: 100%;
+    margin: 0;
+    /* Background image */
+    background: url('../images/background.png') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.flexcontainer {
+    /*padding-bottom: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20%;
+    margin-bottom: auto;
     text-align: center;
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle; */
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-#content {
+.flexcenter {
+    max-height: 350px;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -60%);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
-#heartlogo {
-    margin: 0 auto; 
-    margin-bottom: 20px;
+.content {
+    text-align: center; 
 }
 
-#navcontainer ul {
+
+h1 {
+    font-family: 'ProximaNova-Light', sans-serif;
+    color: #666666;
+    font-size: 35px;
+    font-weight: 100;
+    letter-spacing: 9.5px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+#navigation ul {
     padding: 0;
     margin: 0;
     list-style-type: 0;
     text-align: center;
+    margin: 0 auto;
 }
 
-#navcontainer ul li {
-    font-family: 'Lato', sans-serif;
-    font-size: 20px;
-    font-weight: 100;
+#navigation ul li {
+    font-family: 'ProximaNova-Light', sans-serif;
+    font-size: 15px;
     display: inline;
     letter-spacing: 3px;
 }
 
 li:first-child:after{
-    font-family: 'Lato', sans-serif;
-    font-weight: 100;
-    color: #969696;
-    content: '  & ';
+    font-family: 'ProximaNova-Light', sans-serif;
+    color: #666666;
+    content: '  + ';
 }
 
-#navcontainer ul li a {
-    font-style: italic;
+#navigation ul li a {
     text-decoration: none;
-    color: #969696;
+    color: #666666;
+    opacity: 0.4;
+    transition: opacity .45s ease-in-out;
+    -moz-transition: opacity .45s ease-in-out;
+    -webkit-transition: opacity .45s ease-in-out;
 }
 
-#navcontainer ul li:hover a {
-    color: #C0CCCA;  
+#navigation ul li a:hover {
+    opacity: 1;  
 }
 
 #message {
-    padding: 25px 0;
+    padding: 60px;   
 }
 
 #message p {
-    font-family: 'Lato', sans-serif;
-    color: #969696;
+    font-family: 'ChaparralPro-Regular', serif;
+    color: #666666;
+    font-style: normal;
     font-weight: 100;
-    font-size: 24px;
-    letter-spacing: 2px;
+    font-size: 20px;
+    letter-spacing: 4px;
     margin: 0 auto;
-}
-
-h1 {
-    font-family: 'BebasNeueRegular', sans-serif;
-    color: #C0CCCA;
-    font-size: 55px;
-    letter-spacing: 9.5px;
-    margin: 0 auto;
-    margin-right: -8px;
-    margin-bottom: -2px;
 }
 
 h2 {
-    font-family: 'BebasNeueRegular', sans-serif;
-    color: #C0CCCA;
-    font-size: 34px;
-    letter-spacing: 2.5px;
-    margin-right: -1px;
+    font-family: 'ProximaNova-Light', sans-serif;
+    color: #666666;
+    font-size: 19px;
+    font-weight: 100;
+    letter-spacing: 4px;
+    min-width: 400px;
     margin: 0 auto;
-    padding-bottom: 10px;
-    min-width: 300px;
 }
 
 #mediawrapper {
@@ -109,27 +147,73 @@ h2 {
     margin: auto;
     display: flex;
     justify-content: space-between;
+    margin: 0 auto;
+    padding: 15px;
+}
+
+/* Styling Media Icons */
+
+#facebook path {
+    fill: #666666;
+    opacity: 0.3;
+    transition: opacity .45s ease-in-out;
+    -moz-transition: opacity .45s ease-in-out;
+    -webkit-transition: opacity .45s ease-in-out;
 }
 
 #facebook:hover path {
-    fill: #C0CCCA;
+    opacity: 1;
 }   
 
+#twitter path {
+    fill: #666666;
+    opacity: 0.3;
+    transition: opacity .45s ease-in-out;
+    -moz-transition: opacity .45s ease-in-out;
+    -webkit-transition: opacity .45s ease-in-out;
+}
+
 #twitter:hover path {
-    fill: #C0CCCA;   
+    opacity: 1;
+} 
+
+#instagram path {
+    fill: #666666;
+    opacity: 0.3;
+    transition: opacity .45s ease-in-out;
+    -moz-transition: opacity .45s ease-in-out;
+    -webkit-transition: opacity .45s ease-in-out;
 }
 
 #instagram:hover path {
-    fill: #C0CCCA;   
+    opacity: 1;
+} 
+
+#linkedin path {
+    fill: #666666;
+    opacity: 0.3;
+    transition: opacity .45s ease-in-out;
+    -moz-transition: opacity .45s ease-in-out;
+    -webkit-transition: opacity .45s ease-in-out;
 }
 
 #linkedin:hover path {
-    fill: #C0CCCA;   
+    opacity: 1;
+} 
+
+#github path {
+    fill: #666666;
+    opacity: 0.3;
+    transition: opacity .45s ease-in-out;
+    -moz-transition: opacity .45s ease-in-out;
+    -webkit-transition: opacity .45s ease-in-out;
 }
 
 #github:hover path {
-    fill: #C0CCCA;   
-}
+    opacity: 1;
+} 
+
+
 
 
 
